make migrations for users-table, split the services for tasks and users, update api.gen.go adding logic for users
