# openapi/openapi.yaml
@@ -54,7 +54,7 @@ paths:
         content: 
           application/json:
             schema:
-              $ref: '#/components/schemas/CreateTaskRequest'
+              $ref: '#/components/schemas/UpdateTaskRequest'
       responses:
         '200':
           description: Updated task
@@ -78,6 +78,81 @@ paths:
           description: Task deleted successfully
         '404':
           description: Task not found
+
+  /users:
+    get:
+      summary: Get all users
+      tags:
+        - users
+      responses:
+        '200':
+          description: A list of users
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
+    post:
+      summary: Create a new user
+      tags:
+        - users
+      requestBody:
+        description: JSON body to create a user
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateUserRequest'
+      responses:
+        '201':
+          description: The created user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+  /users/{id}:
+    patch:
+      summary: Update a user
+      tags: 
+        - users
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
+            format: uint
+      requestBody:
+        description: JSON body to update a user
+        required: true
+        content: 
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdateUserRequest'
+      responses:
+        '200':
+          description: Updated user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+    delete:
+      summary: Delete a user by ID
+      tags:
+        - users
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: uint
+      responses:
+        '204':
+          description: User deleted successfully
+        '404':
+          description: User not found
 
 components:
   schemas:
@@ -106,6 +181,41 @@ components:
       properties:
         task:
           type: string
+          nullable: true
         is_done:
           type: boolean
           nullable: true
+
+    User:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: uint
+        email:
+          type: string
+          format: email
+        # password не возвращается в апи ответе
+    CreateUserRequest:
+      type: object
+      required:
+        - email
+        - password
+      properties:
+        email:
+          type: string
+          format: email
+        password:
+          type: string
+          format: password
+    UpdateUserRequest:
+      type: object
+      properties:
+        email:
+          type: string
+          format: email
+          nullable: true  # можно не передавать
+        password:
+          type: string
+          format: password
+          nullable: true  # можно не передавать
